--- a/css/first.html
+++ b/css/first.html
@@ -6,19 +6,18 @@
     </head>
     <body>
         <header>
-            <center>
-                <h1>React</h1>
-            </center>
+            <h1 style="text-align: center;">React</h1>
         </header>
         <hr/>
         <div>
-            <center>
-                <h1>London</h1>
-                <img src="london.jpeg" alt="london image" title="big bang"/>
-            </center>
-            <p>
+            <h1 style="text-align: center;background-color:#581845;color:white">London</h1>
+            <div style="text-align: center;background-color:lightcoral">
+                <img src="london.jpeg" alt="london image" title="big bang" />
+            </div>
+            <p style="color:rgb(233, 131, 233);font-size:20px;">
                 London is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged
             </p>
+            <span style="text-align: center;background-color:skyblue">This is Span tag</span>
             <hr/>
             <center>
                 <h1>Manali</h1>
