--- a/css/second.html
+++ b/css/second.html
@@ -3,49 +3,48 @@
     <head>
         <title>React App</title>
         <link href="favicon.ico" rel="icon" type="image/ico"/>
-        <link href="first.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header>
-            <h1>React</h1>
+            <h1 style="text-align: center;">React</h1>
         </header>
         <hr/>
         <div>
-            <h1 id="firstHeading">London</h1>
+            <h1 style="text-align: center;background-color:#581845;color:white">London</h1>
             <div style="text-align: center;background-color:lightcoral">
                 <img src="london.jpeg" alt="london image" title="big bang" />
             </div>
-            <h1>Heading Second</h1>
-            <p id="mainText">
+            <p style="color:rgb(233, 131, 233);font-size:20px;">
                 London is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged
             </p>
+            <span style="text-align: center;background-color:skyblue">This is Span tag</span>
             <hr/>
-            <div class="card">
-                <div class="innerDiv">
+            <div style="width:23%;float:left;background-color: #581845;margin:1%">
+                <div style="text-align: center;margin-top:4%;color:white">
                     <img src="lunch.png"/>
                     <p> 
                         London is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
                     </p>
                 </div>
             </div>
-            <div class="card color2">
-                <div class="innerDiv">
+            <div style="width:23%;float:left;background-color: #58b4e9;margin:1%">
+                <div style="text-align: center;margin-top:4%;color:white">
                     <img src="dinner.png"/>
                     <p> 
                         London is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
                     </p>
                 </div>
             </div>
-            <div class="card color3">
-                <div class="innerDiv">
+            <div style="width:23%;float:left;background-color: #d88c3d;margin:1%">
+                <div style="text-align: center;margin-top:4%;color:white">
                     <img src="drinks.png"/>
                     <p> 
                         London is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
                     </p>
                 </div>
             </div>
-            <div class="card color4">
-                <div class="innerDiv">
+            <div style="height:320px;width:23%;float:left;background-color: #f0877f;margin:1%;overflow:scroll">
+                <div style="text-align: center;margin-top:4%;color:white">
                     <img src="snacks.png"/>
                     <p> 
                         London is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
@@ -53,8 +52,44 @@
                     </p>
                 </div>
             </div>
+
+            <center>
+                <h1>Manali</h1>
+                <img src="manali.jpeg" alt="manali image"/>
+            </center>
+            <p>
+                Manali is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged
+            </p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Roll No</th>
+                        <th>Name</th>
+                        <th>Class</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>John</td>
+                        <td>UI</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Amit</td>
+                        <td>React</td>
+                    </tr>
+                </tbody>
+            </table>
+            <span>
+                3333 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+            </span>
+            <br/><br/>
+            <span>
+                4444 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
+            </span>
+            <hr/>
         </div>
-        <hr/>   
         <footer>
             <center>
                 <h2> &copy; &backcong; De&hearts;eloper Funnel &backcong;  </h2>
