--- a/css/homepage.html
+++ b/css/homepage.html
@@ -24,9 +24,77 @@
             <div id="heading">
                 Find The Best Place To Enjoy
             </div>
+            <div id="dropdown">
+               <select>
+                   <option>------SELECT CITY----</option>
+               </select> 
+               <select id="secondSelect">
+                <option>------SELECT HOTELS----</option>
+            </select> 
+            </div>
             
         </div>
-        <div id="quicksearch">
+        <div id="quickSearch">
+            <span id="QuickSearchHeading">
+                Quick Searches
+            </span>
+            <span id="QuickSearchSubHeading">
+                Discover Hotels By Type
+            </span>
+            <div id="mainTileContainer">
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="https://i.ibb.co/HBc81qR/luxury.jpg"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="componentHeading">
+                            Travel
+                        </div>
+                        <div class="componentSubHeading">
+                            Plan Your Travel Trip With Us
+                        </div>
+                    </div>
+                </div>
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="https://i.ibb.co/CVNX8NZ/holiday.jpg"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="componentHeading">
+                            Travel
+                        </div>
+                        <div class="componentSubHeading">
+                            Plan Your Travel Trip With Us
+                        </div>
+                    </div>
+                </div>
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="https://i.ibb.co/8P41bJx/business.jpg"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="componentHeading">
+                            Travel
+                        </div>
+                        <div class="componentSubHeading">
+                            Plan Your Travel Trip With Us
+                        </div>
+                    </div>
+                </div>
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="https://i.ibb.co/KrmBprr/travel.jpg"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="componentHeading">
+                            Travel
+                        </div>
+                        <div class="componentSubHeading">
+                            Plan Your Travel Trip With Us
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
