--- a/bootstrap/first.html
+++ b/bootstrap/first.html
@@ -91,6 +91,10 @@
                 </div>
             </div>
             <hr/>
+            <div class="card" style="width:300px">
+                <img class="card-img-top" src="food-wallpaper.png"/>
+            </div>
+            <hr/>
             <div id="cities" class="carousel slide" data-ride="carousel">
                 <!--Indicators-->
                 <ol class="carousel-indicators">
